Domino: Get Paragraph to behave as 100% width and the same time do not fix break list of components
(reference Moonshine-IDE/Moonshine-IDE#1041)

--- a/src/view/ComponentListItemRenderer.mxml
+++ b/src/view/ComponentListItemRenderer.mxml
@@ -68,7 +68,7 @@
 			{
 				var ComponentType:Class = this.componentData.type;
 				var newThumbnail:ISurfaceComponent = new ComponentType();
-				if (this.componentData.maxSize && this.componentData.hasOwnProperty("maxWidth"))
+				if (this.componentData.maxSize && this.componentData.maxSize.hasOwnProperty("maxWidth"))
 				{
 					newThumbnail["maxWidth"] = this.componentData.maxSize.maxWidth;
 				}
