--- a/src/view/primeFaces/forms/PanelGridForm.mxml
+++ b/src/view/primeFaces/forms/PanelGridForm.mxml
@@ -15,7 +15,7 @@
         import data.GridListItem;
 
         import view.interfaces.ISurfaceComponent;
-        import view.primeFaces.supportClasses.GridBase;
+        import view.suportClasses.GridBase;
         import view.primeFaces.supportClasses.table.HeaderGrid;
         import view.primeFaces.surfaceComponents.components.Div;
         import view.primeFaces.surfaceComponents.components.Grid;
@@ -293,8 +293,7 @@
                     {
                         colItem = new GridListItem((grid as HeaderGrid).getTitle(row, col), itemValue);
                         (grid as HeaderGrid).setTitle(colItem.label, row, col);
-                    }
-                    else
+                    } else
                     {
                         colItem = new GridListItem(String("C" + itemValue), itemValue);
                     }
