--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -857,7 +857,7 @@
 		collectionProperty="fontStyles" textProperty="fontStyle"/>
             </mx:VBox >
 
-            <mx:VBox  label="Paragraph Alignment">
+            <mx:VBox  label="Paragraph Alignment" percentHeight="100">
 			<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 				<s:HGroup width="100%" verticalAlign="middle">
 				
